add lab heap usage lab doc & test code