@@ -6,7 +6,7 @@ import java.io.IOException;
  * 
  * How to Run?
  * 
- * java -Dcom.sun.management.jmxremote -Xms1303m -Xmx1303m -XX:MaxPermSize=256m -verbose:gc -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -jar ./target/heapusage.jar 1000 1000
+ * java -Dcom.sun.management.jmxremote -Xms400m -Xmx400m -XX:PermSize=64m -XX:MaxPermSize=64m -verbose:gc -Xloggc:gc-heapusage.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -jar ./target/heapusage.jar 400 2000
  * 
  * @author kylin
  *
@@ -23,7 +23,8 @@ public class Runner {
 		try {
 			int times = Integer.parseInt(args[0]);
 			int interval = Integer.parseInt(args[1]);
-			System.out.println("Press Enter to continue");
+			System.out.println("\n  Press Enter to increase heap " + times + " times(each times 1MB), time interval " + interval + " milliseconds");
+			System.out.println("\n");
 			System.in.read();
 			new HeapUsage(times, interval).run();
 		} catch (NumberFormatException e) {
